# Design-and-Deployment-of-Big-Data-Analytics-Pipeline-on-Azure

./: DataIngestionSql.ipynb  Data_ingestion_to_mongo.py  Data_ingestion_to_sql.py  ForEachInput.json  README.md  main.py  pyproject.toml  random.ipynb  requirements.txt
