[project]
name = "design-and-deployment-of-big-data-analytics-pipeline-on-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]
